--- a/Regular Expressions.ipynb
+++ b/Regular Expressions.ipynb
@@ -304,8 +304,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "humanitarian-gibraltar",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1234'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = r\"(\\d{3})-(\\d{3})-(\\d{4})\"\n",
+    "my_match = re.search(pattern, text)\n",
+    "my_match.group(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "loaded-prediction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(5, 10), match='woman'>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " re.search(r\"man|woman\", \"This woman was here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "dependent-style",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cat', 'hat', 'sat']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r\".at\", \"The cat in the hat sat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "collectible-bermuda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['cat', 'hat', 'sat', 'lat']"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r\".at\", \"The cat in the hat sat slat\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "manufactured-correspondence",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r\"^\\d\", '1 is the loneliest number')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "incident-bearing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['T',\n",
+       " 'h',\n",
+       " 'e',\n",
+       " 'r',\n",
+       " 'e',\n",
+       " ' ',\n",
+       " 'a',\n",
+       " 'r',\n",
+       " 'e',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " 'n',\n",
+       " 'u',\n",
+       " 'm',\n",
+       " 'b',\n",
+       " 'e',\n",
+       " 'r',\n",
+       " 's',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " 'i',\n",
+       " 'n',\n",
+       " 's',\n",
+       " 'i',\n",
+       " 'd',\n",
+       " 'e',\n",
+       " ' ',\n",
+       " ' ',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 'i',\n",
+       " 's',\n",
+       " ' ',\n",
+       " 's',\n",
+       " 'e',\n",
+       " 'n',\n",
+       " 'e',\n",
+       " 't',\n",
+       " 'e',\n",
+       " 'n',\n",
+       " 'c',\n",
+       " 'e']"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phrase = \"There are 3 numbers 34 inside 5 this senetence\"\n",
+    "re.findall(r\"[^\\d]\", phrase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "developmental-laugh",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['There are ', ' numbers ', ' inside ', ' this senetence']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the square brackets indicate exclusion\n",
+    "re.findall(r\"[^\\d]+\", phrase)      # remove digits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "public-shareware",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This is a string', ' but it has punctuation', ' How to remove it']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_phrase = \"This is a string! but it has punctuation. How to remove it?\"\n",
+    "my_list = re.findall(r\"[^!.?]+\", text_phrase)\n",
+    "my_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "confident-liberal",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a string  but it has punctuation  How to remove it'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "' '.join(my_list)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "respiratory-softball",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hyphen-words', 'long-ish']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tetx = \"Only find the hyphen-words. Here are the long-ish dash words?\"\n",
+    "re.findall(r'[\\w]+-[\\w]+', tetx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dimensional-broadway",
    "metadata": {},
    "outputs": [],
    "source": []
