--- a/Spacy basics.ipynb
+++ b/Spacy basics.ipynb
@@ -13,16 +13,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/spacy/util.py:275: UserWarning: [W031] Model 'en_core_web_sm' (2.2.0) requires spaCy v2.2 and is incompatible with the current spaCy version (2.3.5). This may lead to unexpected results or runtime errors. To resolve this, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
-      "  warnings.warn(warn_msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nlp = spacy.load('en_core_web_sm')"
    ]
@@ -46,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "Tesla PROPN nsubj\n",
-      "is AUX aux\n",
+      "is VERB aux\n",
       "looking VERB ROOT\n",
       "at ADP prep\n",
       "buying VERB pcomp\n",
@@ -72,9 +63,9 @@
     {
      "data": {
       "text/plain": [
-       "[('tagger', <spacy.pipeline.pipes.Tagger at 0x7fbe9e25db50>),\n",
-       " ('parser', <spacy.pipeline.pipes.DependencyParser at 0x7fbe9cb540a0>),\n",
-       " ('ner', <spacy.pipeline.pipes.EntityRecognizer at 0x7fbe9e134fa0>)]"
+       "[('tagger', <spacy.pipeline.Tagger at 0x2b2880e9648>),\n",
+       " ('parser', <spacy.pipeline.DependencyParser at 0x2b2880db9a8>),\n",
+       " ('ner', <spacy.pipeline.EntityRecognizer at 0x2b2880dbf48>)]"
       ]
      },
      "execution_count": 5,
@@ -378,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
